--- a/front-end/src/public/prototypes/index.html
+++ b/front-end/src/public/prototypes/index.html
@@ -4,44 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="../stylesheets/App.css" />
+    <link rel="stylesheet" href="./index.css" />
     <title>Date Night Roulette</title>
   </head>
   <body>
-    <Header class="main-header">
-      <h1 class="main-header__title">Date Night Roulette</h1>
-    </Header>
-    <nav class="navigation">
-      <ul class="navigation-list">
-        <li class="navigation-list__item">
-          <a href="Home">Home</a>
-        </li>
-      </ul>
-    </nav>
-    <form class="main-input" action="">
-      <label>Area: <input type="text" name="Area"/></label>
-      <label>Food: <input type="text" name="Food"/></label>
-      <label>Extra: <input type="text" name="Extra"/></label>
-      <button class="shake">Yeah</button>
-    </form>
-    <main class="content">
-      <section class="content__item">
-        <h1 class="content__title">BIG BALL HERE</h1>
-        <div class="ball-outer">
-          <div class="ball-inner">
-            <div class="ball-content"></div>
-          </div>
-        </div>
-      </section>
-      <section>
-        <ul>
-          <li>Pricing</li>
-          <li>Rating</li>
+    <div class="wrapper">
+      <Header class="main-header">
+        <h1 class="main-header__title">Date Night Roulette</h1>
+      </Header>
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-list__item">
+            <a href="#">Home</a>
+          </li>
         </ul>
-      </section>
-    </main>
-    <footer class="footer">
-      <small class="copy">&copy; 2019 - Date Night Roulette</small>
-    </footer>
+      </nav>
+      <form class="wheel-form" action="">
+        <label>Area: <input type="text" name="Area"/></label>
+        <label>Food: <input type="text" name="Food"/></label>
+        <label>Extra: <input type="text" name="Extra"/></label>
+        <button class="shake">Get Shwifty</button>
+      </form>
+      <main class="content">
+        <section class="content__item">
+          <h1 class="content__title">BIG BALL HERE</h1>
+          <div class="ball-outer">
+            <div class="ball-inner">
+              <p class="ball-content"></p>
+            </div>
+          </div>
+        </section>
+        <section>
+          <ul>
+            <li>Pricing</li>
+            <li>Rating</li>
+          </ul>
+        </section>
+      </main>
+      <footer class="footer">
+        <small class="copy">&copy; 2019 - Date Night Roulette</small>
+      </footer>
+    </div>
   </body>
 </html>
